GtkFileChooserNative gtk_file_chooser_get_filter not supported
Steps to reproduce
- Try snippet native-dialog-filter-main.c
- Click on Open Native Dialog and choose a PNG/JPEG file, get_filter_chooser_get_filter returns NULL, no filer is printed in console
- Open Regular Dialog will print if the filter PNG or filter JPEG is selected
Current behavior
Expected outcome
Version information
GTK3.24.1
Additional information
Does the native file chooser support the get_filter or will we have to use GtkFileChooserDialog to get this?