filechooser: Return selected filter as 'current_filter'

Return the selected filter as 'current_filter', which
is added to the FileChooser portal spec in pull request [1].

This will allow making Gtk's
'gtk_file_chooser_get_filter' work for the
portal native file chooser.

[1] https://github.com/flatpak/xdg-desktop-portal/pull/493

Bug: https://gitlab.gnome.org/GNOME/gtk/-/issues/1820